# file-organizer

./: .flake8  .pre-commit-config.yaml  LICENSE  Makefile  README.md  create_test_directory.py  pyproject.toml
.github/workflows/: ci-cd.yaml  ci.yml  python-ci.yml  release.yml
docs/reference/: file_organizer.html  index.html  search.js
docs/reference/file_organizer/: main.html
docs/tutorials/: tutorial.md
file_organizer/: main.py
test_directory/Documents/: essay.docx
test_directory/Others/: README.md  config.yaml  nofileextension  randomfile.unknown  script.sh  weirdfile.data
test_directory/Videos/: animation.mkv  clip.avi
tests/: test_organizer.py
